--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:ngx-flex-limitter": "ng build ngx-flex-limitter --configuration development",
+    "build:ngx-flex-limitter:prod": "ng build ngx-flex-limitter --configuration production",
+    "pack:ngx-flex-limitter": "npm pack ./dist/ngx-flex-limitter",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -23,6 +26,7 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~13.2.5",
     "@angular/cli": "~13.2.0",
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
@@ -33,6 +37,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "ng-packagr": "^13.0.0",
     "typescript": "~4.5.2"
   }
 }
