--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "libraries",
   "version": "2.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
+    "start:demo": "ng serve demo --ssl",
     "build:ngx-flex-limitter": "ng build ngx-flex-limitter --configuration development",
     "build:ngx-flex-limitter:prod": "ng build ngx-flex-limitter --configuration production",
     "pack:ngx-flex-limitter": "npm pack ./dist/ngx-flex-limitter",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build:ngx-progress": "ng build ngx-progress --configuration development",
+    "build:ngx-progress:prod": "ng build ngx-progress --configuration production",
+    "pack:ngx-progress": "npm pack ./dist/ngx-progress"
   },
   "private": true,
   "dependencies": {
