--- a/package.json
+++ b/package.json
@@ -23,8 +23,13 @@
     "@angular/platform-browser": "^16.1.1",
     "@angular/platform-browser-dynamic": "^16.1.1",
     "@angular/router": "^16.1.1",
-    "rxjs": "~7.5.0",
+    "@types/bidirectional-map": "^1.0.2",
+    "bidirectional-map": "^1.1.1",
+    "ngx-highlightjs": "^9.0.0",
+    "primeng": "^16.0.1",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
+    "url-slug": "^4.0.1",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
