--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start:demo": "ng serve demo --ssl",
     "build:all": "npm run build:ngx-progress:prod && npm run build:ngx-flex-limitter:prod && npm run build:demo",
-    "build:demo": "ng build demo --configuration production --base-href https://passiverecords.github.io/libraries/",
+    "build:demo": "ng build demo --configuration production --base-href https://lesfabricants.github.io/libraries/",
     "build:ngx-flex-limitter": "ng build ngx-flex-limitter --configuration development",
     "build:ngx-flex-limitter:prod": "ng build ngx-flex-limitter --configuration production",
     "pack:ngx-flex-limitter": "npm pack ./dist/ngx-flex-limitter",
