--- a/projects/ngx-flex-limitter/package.json
+++ b/projects/ngx-flex-limitter/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@lesfabricants/ngx-flex-limitter",
   "version": "2.0.1",
-  "description": "A library for limiting the number of lines in a flex container.",
+  "description": "A library for limiting the number of lines in a flex container, complete with customizable expand and collapse.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Passiverecords/libraries.git",
+    "url": "https://github.com/LesFabricants/libraries.git",
     "directory": "projects/ngx-flex-limitter"
   },
-  "homepage": "https://github.com/Passiverecords/libraries/tree/develop/projects/ngx-flex-limitter/README.md",
+  "homepage": "https://lesfabricants.github.io/libraries/#/flex-limitter",
   "peerDependencies": {
     "@angular/common": "^15.0.0",
     "@angular/core": "^15.0.0"
