--- a/projects/ngx-progress/package.json
+++ b/projects/ngx-progress/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ngx-progress",
+  "name": "@lesfabricants/ngx-progress",
   "version": "1.0.0",
   "description": "A small utility directive to create progress bars without having to hack your way through css overwrites",
   "keywords": [
