--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "build:ngx-flex-limitter": "ng build ngx-flex-limitter --configuration development",
     "build:ngx-flex-limitter:prod": "ng build ngx-flex-limitter --configuration production",
     "pack:ngx-flex-limitter": "npm pack ./dist/ngx-flex-limitter",
-    "release:ngx-flex-limitter": "cd ./projects/ngx-flex-limitter && standard-version --path ./projects/ngx-flex-limitter",
+    "release:ngx-flex-limitter": "cd ./projects/ngx-flex-limitter && standard-version --path .",
     "build:ngx-progress": "ng build ngx-progress --configuration development",
     "build:ngx-progress:prod": "ng build ngx-progress --configuration production",
     "pack:ngx-progress": "npm pack ./dist/ngx-progress",
-    "release:ngx-progress": "cd ./projects/ngx-progress && standard-version --path ./projects/ngx-progress"
+    "release:ngx-progress": "cd ./projects/ngx-progress && standard-version --path ."
   },
   "private": true,
   "dependencies": {
