--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.13",
+    "@angular/cdk": "^18.2.14",
     "@angular/common": "^18.2.13",
     "@angular/compiler": "^18.2.13",
     "@angular/core": "^18.2.13",
@@ -27,7 +28,7 @@
     "@types/bidirectional-map": "^1.0.2",
     "bidirectional-map": "^1.1.1",
     "ngx-highlightjs": "^9.0.0",
-    "primeng": "^17.13.0",
+    "primeng": "^18.0.2",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "url-slug": "^4.0.1",
