feat(core): add `@primeng/theme`

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "^18.2.13",
     "@angular/platform-browser-dynamic": "^18.2.13",
     "@angular/router": "^18.2.13",
+    "@primeng/themes": "^18.0.2",
     "@types/bidirectional-map": "^1.0.2",
     "bidirectional-map": "^1.1.1",
     "ngx-highlightjs": "^9.0.0",
