--- a/package.json
+++ b/package.json
@@ -23,14 +23,12 @@
     "@angular/core": "^21.1.4",
     "@angular/forms": "^21.1.4",
     "@angular/platform-browser": "^21.1.4",
-    "@angular/platform-browser-dynamic": "^21.1.4",
     "@angular/router": "^21.1.4",
     "bidirectional-map": "^1.1.1",
     "ngx-highlightjs": "^14.0.1",
     "rxjs": "^7.8.2",
     "tslib": "^2.8.1",
-    "url-slug": "^4.0.1",
-    "zone.js": "~0.15.0"
+    "url-slug": "^4.0.1"
   },
   "devDependencies": {
     "@angular/build": "^21.1.4",
@@ -39,16 +37,11 @@
     "@commitlint/cli": "^20.4.1",
     "@commitlint/config-conventional": "^20.4.1",
     "@types/bidirectional-map": "^1.0.4",
-    "@types/jasmine": "~3.10.0",
     "@types/node": "^25.2.3",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.4.4",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
+    "jsdom": "^28.1.0",
     "ng-packagr": "^21.1.0",
     "standard-version": "^9.5.0",
-    "typescript": "~5.9.3"
+    "typescript": "~5.9.3",
+    "vitest": "^4.0.18"
   }
 }
