--- a/projects/ngx-flex-limitter/package.json
+++ b/projects/ngx-flex-limitter/package.json
@@ -9,10 +9,11 @@
   },
   "homepage": "https://lesfabricants.github.io/libraries/#/flex-limitter",
   "peerDependencies": {
-    "@angular/common": "^20.0.0",
-    "@angular/core": "^20.0.0"
+    "@angular/common": "^21.0.0",
+    "@angular/core": "^21.0.0"
   },
   "dependencies": {
     "tslib": "^2.8.1"
-  }
+  },
+  "sideEffects": false
 }
